# electpower

./: 645.json  README.md  dlt64507.xlsx
dlt645_2007-master/: d07_description.json  dlt645_api_07.c  dlt645_api_07.d  dlt645_api_07.h  main.c  main.d  makefile  mdlt645.c  mdlt645_07.h  tt  (+3 more)
epp_2018/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.scan  configure11.ac  test
epp_2018/autom4te.cache/: output.1  requests  traces.0  traces.1
epp_2018/config/: ._dl645_07_a1.csv  ._dl645_07_a2.csv  ._dl645_07_a3.csv  ._dl645_07_a4.csv  ._dl645_07_a5.csv  ._dl645_07_a6.csv  ._dl645_07_a7.csv  dl645_07_a1.csv  dl645_07_a2.csv  dl645_07_a3.csv  dl645_07_a4.csv  dl645_07_a5.csv  dl645_07_a6.csv  dl645_07_a7.csv  dlt645_07.csv
epp_2018/src/: Makefile  Makefile.am  Makefile.in  dlt645_07.c  dlt645_07.h  main.c  mytypes.h
epp_2018/src/.deps/: main.Po
epprotocol/src/: Makefile  Makefile.am  Makefile.in  NEWS  PubFunctions.c  PubFunctions.h  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac~  configure.scan  epp  libtool  main.c  main.h  safe.c
epprotocol/src/.deps/: main.Po
epprotocol/src/DLT645/: app645.c  app645.h  dkv645.json  main645.c  main645.h
epprotocol/src/autom4te.cache/: output.0  output.1  output.3  output.4  output.5  output.6  output.8  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8
epprotocol/src/epplib/: Makefile  Makefile.am  Makefile.in  PubFunctions.c  PubFunctions.h  debug.c  epp_api645.h
epprotocol/src/epplib/.deps/: PubFunctions.Po  debug.Po  pstring.Po  safe.Po
epprotocol/src/epplib/DLT645/: app645.c  app645.h  main645.c
epprotocol/src/epplib/DLT645/.deps/: app645.Po  main645.Po
(+46 files in other folders)
